# transpetro-models

./: .gitignore  README.md  pyproject.toml  test_data.py
artifacts_local/4e00a2a42f8e4750bb1496355e88436e_B-4064A-novos/: per_sensor_summary.parquet
notebooks/: plot_anomalias.ipynb  plot_anomalias_clearml_b4064a_novos.ipynb  plot_anomalias_clearml_b4064a_novos_comparativo.ipynb  plot_anomalias_knn.ipynb  plot_anomalias_smooth.ipynb
notebooks/b-3403c_interpolated/: anomalias_baseline.ipynb  anomalias_lstm.ipynb  anomalias_ocsvm.ipynb
notebooks/b-4064a_interpolated/: anomalias_baseline.ipynb  anomalias_lstm.ipynb  anomalias_ocsvm.ipynb  automl_model _isolation_forest.ipynb  automl_model.ipynb
notebooks/b-90001a_interpolated/: anomalias_baseline.ipynb  anomalias_lstm.ipynb  anomalias_ocsvm.ipynb  automl_model.ipynb
notebooks/b4064a/: anomalias_treino_ate_jun2024.ipynb  automl_best_model.ipynb  automl_v2.ipynb  automl_v2_regimes_2025.ipynb
notebooks/b4064a_interpolated/: analysis.ipynb  plot_anomalias.ipynb
notebooks/b6511502a/: analise_anomalias_dense.ipynb  analise_anomalias_lstm.ipynb  analise_anomalias_ocsvm.ipynb  automl_best_model.ipynb  automl_isolation_forest.ipynb
notebooks/b8802b/: analise_anomalias_dense_5s.ipynb  analise_anomalias_dense_8s.ipynb  analise_anomalias_dense_8s_nfr.ipynb  analise_anomalias_lstm_5s.ipynb  analise_anomalias_lstm_8s.ipynb  analise_anomalias_ocsvm_5s.ipynb  analise_anomalias_ocsvm_8s.ipynb  automl_isolation_forest.ipynb
scripts/: automl.py  train_all.py  train_equipment.py  upload_data.py
(+70 files in other folders)
